@@ -27,12 +27,8 @@
 
 #ifdef WIN32
 #include <io.h>
-#include <SDL_mixer.h>
-#elif defined __FreeBSD__
-#include <SDL_mixer.h>
-#else
-#include <SDL/SDL_mixer.h>
 #endif
+#include <SDL_mixer.h>
 
 
 MEM_HANDLE
