@@ -21,13 +21,9 @@
 #include "libs/graphics/sdl/sdl_common.h"
 #include "libs/sound/sound_common.h"
 
+#include <SDL_mixer.h>
 #ifdef WIN32
-#include <SDL_mixer.h>
 #pragma comment (lib, "SDL_mixer.lib")
-#elif defined __FreeBSD__
-#include <SDL_mixer.h>
-#else
-#include <SDL/SDL_mixer.h>
 #endif
 
 int 
